--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <!-- 
     - primary meta tags
   -->
-  <title>Adex</title>
-  <meta name="title" content="Adex">
-  <meta name="description" content="This is a business agency html template made by codewithsadee">
+  <title>econiture</title>
+  <meta name="title" content="econiture">
+  <meta name="description" content="This is a business agency html template made by vijay">
 
   <!-- 
     - favicon
