--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     - primary meta tags
   -->
   <title>econiture</title>
-  <meta name="title" content="econiture">
-  <meta name="description" content="This is a business agency html template made by vijay">
+  <meta name="title" content="test">
+  <meta name="description" content="This is a business agency made by sarvesh">
 
   <!-- 
     - favicon
@@ -92,7 +92,7 @@
         </ul>
 
         <div class="wrapper">
-          <a href="mailto:info@email.com" class="contact-link">info@email.com</a>
+          <a href="vijaymurade253@gmail.com" class="contact-link">Sarvesh</a>
 
           <a href="tel:001234567890" class="contact-link">00 (123) 456 78 90</a>
         </div>
