--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
     <div class="container">
 
       <a href="#" class="logo">
-        <img src="./assets/images/logo-light.svg" width="74" height="24" alt="Adex home" class="logo-light">
+        <img src="./assets/images/logo-light.svg" width="74" height="24" alt="Sarvesh home" class="logo-light">
 
-        <img src="./assets/images/logo-dark.svg" width="74" height="24" alt="Adex home" class="logo-dark">
+        <img src="./assets/images/logo-dark.svg" width="74" height="24" alt="sarvesh home" class="logo-dark">
       </a>
 
       <nav class="navbar" data-navbar>
